<resources>
    <string name="app_name">Bitacora</string>

    <!-- Menu Principal  -->
    <string name="boton_acerca_de">BITÁCORA</string>
    <string name="boton_2">Proyecto TIC</string>
    <string name="boton_3">Matemáticas</string>
    <string name="boton_4">Alemán</string>
    <string name="boton_5">Marketing</string>
    <string name="boton_6">Emprendedurismo</string>

    <!-- Layout Acerca de -->
    <string name="titulo_acerca_de">Mis Grupos</string>
    <string name="etiqueta_version_acerca_de">Versión</string>
    <string name="texto_version_acerca_de">1.0</string>
    <string name="InformaticaI">Aktion 2</string>
    <string name="hola">hola</string>
    <string name="string_boton_2" />
</resources>