<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MenuPrincipalActivity" >


    <Button
        android:id="@+id/button1"
        android:layout_width="136dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/button"
        android:layout_alignParentEnd="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="142dp"
        android:onClick="lanzarVistaAcercaDe"
        android:text="@string/boton_acerca_de"
        app:backgroundTint="#2196F3" />

    <Button
        android:id="@+id/button"
        android:layout_width="136dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_centerInParent="true"
        android:layout_marginStart="132dp"
        android:layout_marginTop="359dp"
        android:onClick="lanzarVistaAcercaDe"
        android:text="@string/boton_2"
        app:backgroundTint="#2196F3" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="100dp"
        android:layout_height="93dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="3dp"
        android:layout_marginBottom="6dp"
        android:contentDescription="@string/hola"
        android:onClick="lanzarVistaAcercaDe"
        android:src="@android:drawable/ic_menu_add" />

    <Button
        android:id="@+id/button2"
        android:layout_width="135dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="135dp"
        android:layout_marginTop="301dp"
        android:contentDescription="@string/boton_2"
        android:onClick="lanzarVistaAcercaDe"
        android:text="@string/boton_5"
        app:backgroundTint="#2196F3" />

    <Button
        android:id="@+id/button3"
        android:layout_width="137dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_centerInParent="true"
        android:layout_marginStart="133dp"
        android:layout_marginTop="228dp"
        android:layout_marginEnd="140dp"
        android:onClick="lanzarVistaAcercaDe"
        android:text="@string/boton_4"
        app:backgroundTint="#69BDC8" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="383dp"
        android:layout_height="210dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="0dp"
        android:contentDescription="@string/hola"
        android:onClick="lanzarVistaAcercaDe"
        android:src="@drawable/bitacora_logo" />


</RelativeLayout>